add Users migration
